# PyEventor

./: .readthedocs.yaml  README.md  mypy.ini  pyproject.toml
docs/: conf.py  index.rst
docs/source/: about.rst  aggregate.rst  asyncio.rst  event_store.rst  examples.rst  installation.rst  plugins.rst  projection.rst  snapshot.rst  start.rst
examples/: aggregate.py  async_postgres_storage.py  in_memory_storage.py  postrges_example.py  simple_aggregate.py
pyeventor/: aggregate.py  decorator.py  event.py  event_store.py  handler.py
tests/: test.ipynb  test_aggregate.py  test_decorator.py  test_event.py  test_event_store.py  test_handler.py
tests/asyncio/: test_aggregate.py  test_event_store.py
